@@ -3,6 +3,7 @@
 	  - Do not add dummy userPassword attribute
 	  - Die on adding a user entry fails
 	  - Set random password instead of insecure one on `smbpasswd -a`
+	  - Check if specified UID is owned by local user (bug #2974)
 	* Report error on exec() failure
 
 2014-08-27 <fumiyas at OSS Technology Corp., Japan>
